--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
-    "start": "concurrently \"npm run server\" \"npm run client\""
+    "build": "cd client && npm run build",
+    "install-client": "cd client && npm install",
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "start": "node index.js",
+    "start-dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
